--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Edification - Responsive Education HTML5 Template</title>
+  <title>International Mobility Esprit</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Place favicon.ico in the root directory -->
-  <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/Logo_ESPRIT_Ariana.jpg"> 
   <!-- all css here -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
